[gd_scene load_steps=11 format=3 uid="uid://cf8233d4wx1t0"]

[ext_resource type="Script" path="res://scripts/actors/player.gd" id="1_jblnx"]
[ext_resource type="Texture2D" uid="uid://bmsnrjxyrj78x" path="res://assets/img/player_wip.png" id="1_n1rog"]
[ext_resource type="AudioStream" uid="uid://ccws2orgj1esf" path="res://assets/sfx/shot.wav" id="3_n18l1"]
[ext_resource type="AudioStream" uid="uid://ca2pyvy3nu330" path="res://assets/sfx/player sound - Stain.wav" id="4_a4f70"]
[ext_resource type="AudioStream" uid="uid://bmr2fr0vov2o4" path="res://assets/sfx/player sound - grunt.wav" id="4_oyirx"]
[ext_resource type="AudioStream" uid="uid://ct2unbmpyilbb" path="res://assets/sfx/player sound - grunt 2 .wav" id="5_2isc3"]
[ext_resource type="AudioStream" uid="uid://cqgxabjhccy4g" path="res://assets/sfx/player sound - Stain 2.wav" id="5_xjbnp"]
[ext_resource type="AudioStream" uid="uid://decjh55bxyaqi" path="res://assets/sfx/player sound - Stain 3.wav" id="6_q6bac"]
[ext_resource type="AudioStream" uid="uid://cmswgahhtvfx6" path="res://assets/sfx/player sound - Heal.wav" id="7_2epmr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bnc0u"]
radius = 14.0
height = 62.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
platform_wall_layers = 1
script = ExtResource("1_jblnx")

[node name="PlayerWip" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("1_n1rog")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_bnc0u")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 31)
position_smoothing_enabled = true

[node name="Firerate" type="Timer" parent="."]
one_shot = true

[node name="ShootSrc" type="Marker2D" parent="."]
position = Vector2(0, -8)

[node name="head" type="Marker2D" parent="."]
position = Vector2(0, -30)

[node name="feet" type="Marker2D" parent="."]
position = Vector2(0, 28)

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_n18l1")
volume_db = -3.0
max_polyphony = 8
bus = &"SFX"

[node name="grunt1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_oyirx")
bus = &"SFX"

[node name="grunt2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2isc3")
bus = &"SFX"

[node name="VoiceLine1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_a4f70")
bus = &"Voices"

[node name="VoiceLine2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xjbnp")
bus = &"Voices"

[node name="VoiceLine3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_q6bac")
bus = &"Voices"

[node name="VoiceLineHeal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_2epmr")
bus = &"Voices"
